fix: tz and order by

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
 
         <header>
             <h1>Current Weather Conditions in Gatineau, Quebec, Canada</h1>
-            <div>as of {{timestamp}}</div>
+            <div>as of {{timestamp}} Eastern</div>
         </header>
 
         <main>
